# GREAT-UPD

./: .gitignore  CMakeLists.txt  README.md  ReadMe.md
doc/: ReadMe_doc  ~$EAT-UPD Users Guide(0801).docx
doc/UPD_config/: UPD_EWL.xml  UPD_NL.xml  UPD_WL.xml
sample data/: ReadMe_data
sample data/UPD_2020001/: cmd.txt  site_list  upd_Linux.ini  upd_Macintosh.ini  upd_Windows.ini
sample data/UPD_2020001/XML/: upd_EWL_Linux.xml  upd_EWL_Windows.xml  upd_NL_Linux.xml  upd_NL_Windows.xml  upd_WL_Linux.xml  upd_WL_Windows.xml
sample data/UPD_2020001/ambflag/: abpo0010.20o.ambflag  aira0010.20o.ambflag  algo0010.20o.ambflag  alic0010.20o.ambflag  anmg0010.20o.ambflag  areg0010.20o.ambflag  aruc0010.20o.ambflag  ascg0010.20o.ambflag  bake0010.20o.ambflag  bik00010.20o.ambflag  bogt0010.20o.ambflag  bor10010.20o.ambflag  braz0010.20o.ambflag  brew0010.20o.ambflag  brst0010.20o.ambflag  bshm0010.20o.ambflag  cas10010.20o.ambflag  ccj20010.20o.ambflag
sample data/UPD_2020001/ambflag23/: abpo0010.20o.ambflag  aira0010.20o.ambflag  algo0010.20o.ambflag  alic0010.20o.ambflag  anmg0010.20o.ambflag  areg0010.20o.ambflag  aruc0010.20o.ambflag  ascg0010.20o.ambflag  bake0010.20o.ambflag  bik00010.20o.ambflag  bogt0010.20o.ambflag  bor10010.20o.ambflag  braz0010.20o.ambflag  brew0010.20o.ambflag  brst0010.20o.ambflag  bshm0010.20o.ambflag  cas10010.20o.ambflag  ccj20010.20o.ambflag
sample data/UPD_2020001/ambupd/: AIRA_ambupd_2020001  BAKE_ambupd_2020001
sample data/UPD_2020001/gnss/: ifcb_2020001
sample data/UPD_2020001/result/: upd_ewl_2020001_C  upd_ewl_2020001_E  upd_ewl_2020001_G  upd_ewl_epoch_2020001_C  upd_ewl_epoch_2020001_E  upd_ewl_epoch_2020001_G  upd_nl_2020001_C  upd_nl_2020001_E  upd_nl_2020001_G  upd_nl_2020001_R  upd_wl_2020001_C  upd_wl_2020001_E  upd_wl_2020001_G  upd_wl_2020001_R
src/LibGnut/gall/: gallbias.cpp  gallbias.h  gallobs.cpp  gallobs.h
src/LibGnut/gcoders/: biabernese.cpp  biabernese.h  rinexn.cpp  rinexo2.cpp
src/LibGnut/gdata/: gdata.h  gnav.h  gobsgnss.cpp  gobsgnss.h
src/LibGnut/gio/: glog.cpp
src/LibGnut/gmodels/: gbias.h
src/LibGnut/gset/: gsetbase.cpp  gsetgnss.cpp  gsetgnss.h  gsetinp.cpp  gsetinp.h  gsetout.cpp  gsetout.h
src/LibGnut/gutils/: gconst.h  gnss.cpp  gnss.h  gobs.cpp  gsys.cpp  gsys.h  gtime.cpp  gtypeconv.cpp  gtypeconv.h
src/LibMat/: CMakeLists.txt
src/LibMat/gutils/: ExportMat.h
src/LibMat/newmat/: newmat.h
src/LibUPD/: CMakeLists.txt
src/LibUPD/gall/: gallambflag.cpp  gallambflag.h  gallambupd.cpp  gallambupd.h  gallproc.cpp  gallproc.h
src/LibUPD/gambfix/: gambcommon.cpp  gambcommon.h
src/LibUPD/gcoders/: ambflag.cpp  ambflag.h  ambupd.cpp  ambupd.h  ifcb.cpp  ifcb.h  upd.cpp  upd.h
src/LibUPD/gdata/: gambflag.cpp  gambflag.h  gambupd.cpp  gambupd.h  gifcb.h  gupd.cpp  gupd.h
src/LibUPD/gproc/: gcorbds.cpp  gcorbds.h  gupdlsq.cpp  gupdlsq.h
src/LibUPD/gset/: gcfg_upd.cpp  gcfg_upd.h  gsetproc.cpp  gsetproc.h
src/LibUPD/gutils/: ExportUPD.h  ginfolog.cpp  ginfolog.h
src/app/: CMakeLists.txt  great_upd.cpp  great_upd.h
util/: ReadMe_util
util/PreEdit/Linux/: GREAT-PreEdit
util/PreEdit/PreEdit_config/: PreEdit12.xml  PreEdit23.xml
util/PreEdit/PreEdit_sample/: PreEdit_Linux.ini  PreEdit_Macintosh.ini  PreEdit_Windows.ini  cmd.txt  site_list
util/PreEdit/PreEdit_sample/2020001/: PreEdit.xml
util/PreEdit/PreEdit_sample/2020001/ambflag/: areg0010.20o.ambflag  areq0010.20o.ambflag
util/batch_process/: PreEdit.ini  PreEdit.py  download_dcb.py  download_nav.py  download_obs.py  gnss_config.py  gnss_time.py  gnss_tools.py  upd.ini  upd.py
util/upd_analysis/NL&EWL_epoch/: batch_epoch.m  draw_epoch_upd.m  read_epoch_upd_file.m
util/upd_analysis/WL&EWL/: batch_day.m  draw_day_upd.m  read_day_upd_files.m
util/upd_analysis/upd_res/: batch_res.m  draw_updres.m  read_updres_file.m
